@@ -14,6 +14,7 @@
  13. Wish now has a one rl-day cool-down.
  14. Siplet now supports ANSI-256
  15. New Scriptable command: MPCASTEXT
+ 16. New MOB class: GenRideableUndead, with Raise Undead support in prayers.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
